--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -8,6 +8,7 @@
             <div class="column column--1of3">
                 <h3 class="singleProject__subtitle">Tools & Stacks</h3>
                 <div class="singleProject__toolStack">
+                    
                     {% for tag in project.tags.all %}
                         <span class="tag tag--pill tag--sub tag--lg">
                             <small>{{ tag }}</small>
@@ -29,7 +30,7 @@
             <div class="column column--2of3">
                 <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
                 
-                <a href="profile.html" class="singleProject__developer">Sonu Gupta</a>
+                <a href="{% url 'user-profile' project.owner.id %}" class="singleProject__developer">{{ project.owner.name }}</a>
                 
                 <h2 class="singleProject__title">{{ project.title }}</h2>
                 
