--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,18 @@
     </head>
     <body>
         {% include 'navbar.html' %} 
-    
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert--{{message.tags}}">
+                    <p class="alert__message">{{ message }}</p>
+                    <button class="alert__close">⨯</button>
+                </div>
+            {% endfor %}
+        {% endif %}
+        
         {% block content %} 
+        
         {% endblock content %}
-
+        <script type="text/javascript" src={% static 'uikit/app.js' %}></script>
     </body>
 </html>
-<body></body>
