--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 <!-- Header Section -->
 <header class="header">
     <div class="container container--narrow">
-        <a href="{% url 'projects' %}" class="header__logo">
+        <a href="{% url 'profiles' %}" class="header__logo">
             <img src="{% static 'img/logo.svg' %} " alt="DevSearch Logo" />
         </a>
         <nav class="header__nav">
@@ -16,9 +16,13 @@
                 <li class="header__menuItem"><a href="{% url 'profiles' %}">Developers</a></li>
                 <li class="header__menuItem"><a href="{% url 'projects' %}">Projects</a></li>
                 <li class="header__menuItem"><a href="#">Inbox</a></li>
-                <li class="header__menuItem"><a href="#">My Account</a></li>
-                {% comment %} <li class="header__menuItem"><a href="#" class="btn btn--sub">Login/Sign Up</a></li> {% endcomment %}
-                <li class="header__menuItem"><a href="{% url 'create-project' %}" class="btn btn--sub">Add Project</a></li>
+                
+                {% if user.is_authenticated %}
+                    <li class="header__menuItem"><a href="{% url 'create-project' %}">Add Project</a></li>
+                    <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
+                {% else %}
+                    <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a></li>
+                {% endif %}
             </ul>
         </nav>
     </div>
