--- a/projects/templates/projects/update.html
+++ b/projects/templates/projects/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Project Add form</h1>  
+    <h1>Update Project </h1>  
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
