--- a/users/templates/login_register.html
+++ b/users/templates/login_register.html
@@ -16,7 +16,7 @@
                 <!-- Input:Email -->
                 <div class="form__field">
                     <label for="username">Username: </label>
-                    <input class="input input--text" id="username" type="text" name="username" placeholder="Enter username " />
+                    <input class="input input--text" id="username" type="text" name="username" value="{{username}}" placeholder="Enter username " />
                 </div>
     
                 <!-- Input:Password -->
