--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -48,21 +48,35 @@
             </div>
         </div>
     </section>
-    <div class="pagination">
-        <ul class="container">
-            <li><a href="#" class="btn btn--disabled">&#10094; Prev</a></li>
-            <li><a href="#" class="btn btn--sub">01</a></li>
-            <li><a href="#" class="btn">02</a></li>
-            <li><a href="#" class="btn">03</a></li>
-            <li><a href="#" class="btn">04</a></li>
-            <li><a href="#" class="btn">05</a></li>
-            <li><a href="#" class="btn">06</a></li>
-            <li><a href="#" class="btn">07</a></li>
-            <li><a href="#" class="btn">08</a></li>
-            <li><a href="#" class="btn">09</a></li>
-            <li><a href="#" class="btn">10</a></li>
-            <li><a href="#" class="btn">Next &#10095;</a></li>
-        </ul>
-    </div>
+
+    {% if projects.has_other_pages %}
+        <div class="pagination">
+            <ul class="container">
+                {% if projects.number == 1 %}
+                    <li><a href="" tabindex="-1" class="btn btn--disabled">&#10094; Prev</a></li>
+                {% endif %}
+                
+                {% if projects.has_previous %}
+                    <li><a href="?page={{ projects.previous_page_number }}" class="btn">&#10094; Prev</a></li>
+                    <li><a class="btn" href="?page={{ projects.previous_page_number }}">{{ projects.previous_page_number }}</a></li>
+                {% endif %}
+
+                <li><a class="btn btn--sub" href="?page={{ projects.number }}">{{ projects.number }}</a></li>
+
+                
+                {% if projects.has_next %}
+                    <li><a class="btn" href="?page={{ projects.next_page_number }}">{{ projects.next_page_number }}</a></li>
+                    <li><a class="btn" href="?page={{ projects.next_page_number }}">Next &#10095;</a></li>
+                    <li><a class="btn" href="?page={{ projects.paginator.num_pages }}">Last &#10095;&#10095;</a></li>
+                    
+                {% else %}
+                    <li><a class="btn btn--disabled" href="?page={{ projects.paginator.num_pages }}">Last &#10095;&#10095;</a></li>
+                {% endif %}
+            </div>
+    {% endif %}
+
+
+
+    
 </main>
 {% endblock content %}
