Added search with paginations

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,5 +34,6 @@
         
         {% endblock content %}
         <script type="text/javascript" src={% static 'uikit/app.js' %}></script>
+        <script src="{% static 'js/main.js' %}"></script>
     </body>
 </html>
