--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         
         {% if messages %}
             {% for message in messages %}
-                <div class="alert alert--{{message.tags}}">
+                <div class="alert alert--{{message.tags}}" style="position: absolute; left: 50%; top: 16%; transform: translate(-50%, -50%);">
                     <p class="alert__message">{{ message }}</p>
                     <button class="alert__close">⨯</button>
                 </div>
