--- a/projects/templates/projects/new-project.html
+++ b/projects/templates/projects/new-project.html
@@ -6,9 +6,10 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <a class="backButton" href="{% url 'projects' %}"><i class="im im-angle-left"></i></a>
-            <br />
-
+            <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
+            <div class="auth__header text-center">
+                <h3>Add New Project </h3>  
+            </div>
             <form method="post" enctype="multipart/form-data"> {% csrf_token %} 
                 {% for field in form %}
                 
@@ -18,6 +19,10 @@
                     </div>
                     
                 {% endfor %}
+                <div class="form__field">
+                    <label for="tags#text">Tags</label>
+                    <textarea class="input" name="newtags" placeholder="Add tags here.. "></textarea>
+                </div>
                 <input class="btn btn--sub btn--lg my-md" type="submit" value="submit" />
             </form>
         </div>
