modified tags listing

--- a/projects/templates/projects/update.html
+++ b/projects/templates/projects/update.html
@@ -1,26 +1,31 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
             <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
             <div class="auth__header text-center">
-                <h3>Update Project </h3>
+                <h3>Update Project</h3>
             </div>
 
-            <form method="post" enctype="multipart/form-data"> {% csrf_token %} 
-                {% for field in form %}
-                
-                    <div class="form__field">
-                        <label for="formInput#text">{{ field.label }} </label>
-                        {{field}}
-                    </div>
-                    
-                {% endfor %}
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %} {% for field in form %}
+
                 <div class="form__field">
-                    <label for="tags#text">Tags</label>
-                    <textarea class="input" name="newtags" placeholder="Add tags here.. "></textarea>
+                    <label for="formInput#text">{{ field.label }} </label>
+                    {{field}}
+                </div>
+
+                {% endfor %}
+
+                <div class="form__field">
+                    <label for="tags">Tags</label><br />
+                    {% for tag in project.tags.all %}
+                    <div class="tag tag--pill tag--main edit-tags" data-tag="{{ tag.id }}" data-project="{{ project.id }}">{{ tag }} &times;</div>
+                    {% endfor %}
+                    <br />
+                    <br />
+
+                    <textarea class="input" name="newtags" placeholder="Add more tags here.. "></textarea>
                 </div>
                 <input class="btn btn--sub btn--lg my-md" type="submit" value="submit" />
             </form>
