--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -28,7 +28,7 @@
             
             </div>
             <div class="column column--2of3">
-                <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
+                <img class="singleProject__preview" src="{{ project.imageURL }}" alt="portfolio thumbnail" />
                 
                 <a href="{% url 'user-profile' project.owner.id %}" class="singleProject__developer">{{ project.owner.name }}</a>
                 
