--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -8,7 +8,7 @@
             <div class="column column--1of3">
                 <div class="card text-center">
                     <div class="card__body dev">
-                        <img class="avatar avatar--xl" src="{{ profile.profile_pic.url }}" />
+                        <img class="avatar avatar--xl" src="{{ profile.imageURL }}" />
                         <h2 class="dev__name">{{ profile.name }}</h2>
                         <p class="dev__title">{{ profile.headline }}</p>
                         <p class="dev__location">From {{ profile.location }}</p>
@@ -74,7 +74,7 @@
                             <div class="column">
                                 <div class="card project">
                                     <a href="{% url 'single-project' project.id %}" class="project">
-                                        <img class="project__thumbnail" src="{{ project.featured_image.url }}"
+                                        <img class="project__thumbnail" src="{{ project.imageURL }}"
                                             alt="project thumbnail" />
                                         <div class="card__body">
                                             <h3 class="project__title">{{ project.title }}</h3>
