Added local mail-server over gmail server

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -127,7 +127,7 @@
                     <div class="table_center">
                         <div class="drop-down">
                             <div id="dropDown">
-                                <a class="drop-down__name" style="color: whitesmoke; cursor: pointer;"> {{ request.user }} </a>
+                                <a class="drop-down__name" style="color: whitesmoke; cursor: pointer;"> &nbsp;{{ request.user }} &nbsp; </a>
                             </div>
                         
                             <div class="drop-down__menu-box">
