--- a/users/templates/login_register.html
+++ b/users/templates/login_register.html
@@ -1,76 +1,77 @@
-{% extends 'base.html' %}
-{% block content %}
-{% load static %}
+{% extends 'base.html' %} 
+{% load static %} 
 
-{% if page == 'login' %}
-    <div class="auth">
-        <div class="card">
-            <div class="auth__header text-center">
-                <a href="/"><img src="{% static 'img/icon.svg' %}" alt="icon" /></a>
-                <h3>Account Login</h3>
-                <p>Hello Developer, Welcome Back!</p>
-            </div>
-        
-            <form action="{% url 'login' %} " method="POST" class="form auth__form"> {% csrf_token %}
-                
-                <!-- Input:Email -->
-                <div class="form__field">
-                    <label for="username">Username: </label>
-                    <input class="input input--text" id="username" type="text" name="username" value="{{username}}" placeholder="Enter username " />
-                </div>
+{% block content %} 
+    {% if page == 'login' %}
     
-                <!-- Input:Password -->
-                <div class="form__field">
-                    <label for="password">Password: </label>
-                    <input class="input input--password" id="password" type="password" name="password" placeholder="Enter password " />
+        <div class="auth">
+            <div class="card">
+                <div class="auth__header text-center">
+                    <a href="/"><img src="{% static 'img/icon.svg' %}" alt="icon" /></a>
+                    <h3>Account Login</h3>
+                    <p>Hello Developer, Welcome Back!</p>
                 </div>
-                
-                <div class="auth__actions">
-                    <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
-                    <a href="{% url 'reset_password' %}">Forget Password?</a>
+
+                <form action="{% url 'login' %} " method="POST" class="form auth__form">
+                    {% csrf_token %}
+
+                    <!-- Input:Email -->
+                    <div class="form__field">
+                        <label for="username">Username: </label>
+                        <input class="input input--text" id="username" type="text" name="username" value="{{username}}" placeholder="Enter username " />
+                    </div>
+
+                    <!-- Input:Password -->
+                    <div class="form__field">
+                        <label for="password">Password: </label>
+                        <input class="input input--password" id="password" type="password" name="password" placeholder="Enter password " />
+                    </div>
+
+                    <div class="auth__actions">
+                        <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+                        <a href="{% url 'reset_password' %}">Forget Password?</a>
+                    </div>
+                </form>
+
+                <div class="auth__alternative">
+                    <p>Don't have an Account? <a href="{% url 'register' %}">Sign Up</a></p>
                 </div>
-            </form>
-            
-            <div class="auth__alternative">
-                <p>Don't have an Account? <a href="{% url 'register' %}">Sign Up</a></p>
             </div>
         </div>
-    </div>
 
-{% else %}
-    <br><br><br><br><br><br><br><br>
-    <div class="auth">
-        <div class="card">
-            <div class="auth__header text-center">
-                <a href="/"><img src="{% static 'img/icon.svg' %}" alt="icon" /></a>
-                <h3>Account SignUp</h3>
-                <p>Create a new developer account</p>
-            </div>
-            <form action="{% url 'register' %}" method="POST"> {% csrf_token %} 
+    {% else %}
 
-                {% for field in form %}
-                    <div class="form__field">
-                        {{ field.label_tag }}
-                        {{ field }}
-                        
-                        {% for error in field.errors %}
-                            <small style="color:red;"> {{error}} </small>
+        <main class="formPage my-xl">
+            <div class="content-box"  style="width:43%">
+                <div class="formWrapper">
+                    <a class="backButton" href="{% url 'login' %}"><i class="im im-angle-left"></i></a>
+                    <div class="auth__header text-center">
+                        <a href="/"><img src="{% static 'img/icon.svg' %}" alt="icon" /></a>
+                        <h3>Account SignUp</h3>
+                        <p>Create a new developer account</p>
+                    </div>
+                    <form action="{% url 'register' %}" method="POST">
+                        {% csrf_token %} {% for field in form %}
+                        <div class="form__field">
+                            {{ field.label_tag }} {{ field }} <br>
+                            {% for error in field.errors %}
+                            <small style="color: red"> {{error}} </small>
+                            {% endfor %}
+                        </div>
                         {% endfor %}
 
+                        <div class="auth__actions">
+                            <input class="btn btn--sub btn--lg" type="submit" value="Register Me" />
+                        </div>
+                    </form><br>
 
+                    <div class="auth__alternative">
+                        <p>Already have an Account? <a href="{% url 'login' %}"> Log In</a></p>
                     </div>
-                {% endfor %}
-                
-                <div class="auth__actions">
-                    <input class="btn btn--sub btn--lg" type="submit" value="Register Me" />
                 </div>
-            </form>
-            
-            <div class="auth__alternative">
-                <p>Already have an Account? <a href="{% url 'login' %}"> Log In</a></p>
             </div>
-        </div>
-    </div>
-    <br><br><br><br><br><br><br><br>
-{% endif %}
+        </main>
+
+    {% endif %} 
+
 {% endblock content %}
