--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 <!-- Main Section -->
-<main class="projects">
+<!--<main class="projects">--> 
+    <main class="hero">
     <section class="hero-section text-center">
         <div class="container container--narrow">
             <div class="hero-section__box">
