--- a/blogs/templates/blogs/post_form.html
+++ b/blogs/templates/blogs/post_form.html
@@ -11,6 +11,7 @@
             </div>
 
             <form method="POST" enctype="multipart/form-data"> {% csrf_token %} 
+                {{ form.media }}
                 
                 {% for field in form %}
                     <div class="form__field">
