--- a/blogs/templates/blogs/single-post.html
+++ b/blogs/templates/blogs/single-post.html
@@ -20,7 +20,7 @@
                 <h2 class="singlePost__title">{{ post.title }}</h2>
                 
                 <div class="singlePost__info">
-                    <p>{{ post.content|linebreaksbr }}</p>
+                    <p>{{ post.content|safe|linebreaksbr }}</p>
                 </div>
 
                 <div class="comments">
