--- a/blogs/templates/blogs/user_posts.html
+++ b/blogs/templates/blogs/user_posts.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <!-- Main Section -->
 <main class="projects">
     <section class="hero-section text-center">
@@ -40,7 +41,7 @@
                             </td>
                             <td class="settings__tableInfo">
                                 <a href="{% url 'single-post' post.id %}">{{ post.title }}</a>
-                                <p>{{ post.content|slice:"190" }}</p>
+                                <p>{{ post.content|slice:"150"|safe }}</p>
                                 
                                 <br>
                                 {% if post.status == 0 %}
