--- a/projects/templates/projects/new-project.html
+++ b/projects/templates/projects/new-project.html
@@ -11,6 +11,7 @@
                 <h3>Add New Project </h3>  
             </div>
             <form method="post" enctype="multipart/form-data"> {% csrf_token %} 
+                {{ form.media }}
                 {% for field in form %}
                 
                     <div class="form__field">
