--- a/users/templates/account.html
+++ b/users/templates/account.html
@@ -78,7 +78,7 @@
                             </td>
                             <td class="settings__tableInfo">
                                 <a href="{% url 'single-project' project.id %}">{{project.title}}</a>
-                                <p>{{ project.description|slice:"150" }}</p>
+                                <p>{{ project.description|slice:"150"|safe }}</p>
                             </td>
                             <td class="settings__tableActions">
                                 <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-project' project.id %}"><i class="im im-edit"></i> Edit</a>
