--- a/users/templates/message.html
+++ b/users/templates/message.html
@@ -15,7 +15,7 @@
             {% endif %}
 
             <p class="message__date">{{ message.created }}</p>
-            <div class="message__body">{{message.body|linebreaksbr}}</div>
+            <div class="message__body">{{message.body|safe}}</div>
         </div>
     </div>
 </main>
