--- a/blogs/templates/blogs/single-post.html
+++ b/blogs/templates/blogs/single-post.html
@@ -3,11 +3,35 @@
 
 <main class="singlePost my-md">
     <div class="container">
-        <div class="layout">
+        <div class="post-layout">
             <div class="column column--1of3">
-                <h3 class="singlePost__subtitle text-center">Related latest posts</h3>
+                <hr><h3 class="singlePost__subtitle">Related tags<hr></h3>
                 <div class="singlePost__toolStack">
-                   
+                    {% for tag in post.tags.all %}
+                        <span class="tag tag--pill tag--sub tag--lg">
+                            <small>{{ tag }}</small>
+                        </span>
+                    {% endfor %}
+                </div>
+                <hr><h3 class="singlePost__subtitle">Related posts<hr></h3>
+                <div class="singlePost__toolStack">
+                    <table class="posts__table">
+                        {% for post in related_posts|slice:'5' %}
+                            <tr>
+                                <td class="posts__thumbnail">
+                                    <a href="{% url 'single-post' post.id %}">
+                                        <img src="{{ post.featured_image.url }}" alt="post Thumbnail" />
+                                    </a>
+                                </td>
+                                <td class="posts__tableInfo">
+                                    <a href="{% url 'single-post' post.id %}">{{ post.title }}</a>
+                                    <p>{{ post.content|slice:"50" }}</p>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+
+
                 </div>
 
             </div>
