--- a/blogs/templates/blogs/single-post.html
+++ b/blogs/templates/blogs/single-post.html
@@ -9,7 +9,7 @@
                 <div class="singlePost__toolStack">
                     {% for tag in post.tags.all %}
                         <span class="tag tag--pill tag--sub tag--lg">
-                            <small>{{ tag }}</small>
+                            <a href="{% url 'tag-view' tag.id %}"> <small>{{ tag }}</small></a>
                         </span>
                     {% endfor %}
                 </div>
