--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1073,3 +1073,30 @@ img {
 .posts__tableActions {
     text-align: right;
 }
+
+
+/*=======================
+  Tagify Settings
+========================*/
+
+
+.tagify--outside {
+    border: 0;
+}
+
+.tagify--outside .tagify__input {
+    order: -1;
+    flex: 100%;
+    border: 1px solid var(--tags-border-color);
+    margin-bottom: 1em;
+    transition: 0.1s;
+}
+
+.tagify--outside .tagify__input:hover {
+    border-color: var(--tags-hover-border-color);
+}
+
+.tagify--outside.tagify--focus .tagify__input {
+    transition: 0s;
+    border-color: var(--tags-focus-border-color);
+}
