added tagify and changed tags deletion process.

--- a/blogs/templates/blogs/post_form.html
+++ b/blogs/templates/blogs/post_form.html
@@ -19,6 +19,10 @@
                         {{field}}
                     </div>
                 {% endfor %}
+                <div class="form__field">
+                    <label for="newtags">Tags</label>
+                    <textarea type="text" class="taginput" name='newtags' placeholder="Add more tags here.. "></textarea>
+                </div>
                 <input class="btn btn--sub btn--lg my-md" type="submit" value="submit" />
             </form>
         </div>
