--- a/projects/templates/projects/new-project.html
+++ b/projects/templates/projects/new-project.html
@@ -20,9 +20,10 @@
                     </div>
                     
                 {% endfor %}
+    
                 <div class="form__field">
-                    <label for="tags#text">Tags</label>
-                    <textarea class="input" name="newtags" placeholder="Add tags here.. "></textarea>
+                    <label for="newtags">Tags</label>
+                    <textarea type="text" class="taginput" name='newtags' placeholder="Add more tags here.. "></textarea>
                 </div>
                 <input class="btn btn--sub btn--lg my-md" type="submit" value="submit" />
             </form>
