--- a/blogs/templates/blogs/posts.html
+++ b/blogs/templates/blogs/posts.html
@@ -33,11 +33,10 @@
                                     <h3 class="project__title">{{post.title}}</h3>
                                     <p><a class="project__author" href="{% url 'user-profile' post.author.id %}">By {{ post.author.name }}</a></p>
                                     <p class="project--rating"><span style="font-weight: bold">{{ post.vote_ratio }}%</span> Postitive Feedback ({{project.vote_count}} Vote{{ project.vote_count|pluralize:",s" }})</p>
-                                    <p class="dev__info">{{ post.content|slice:"120" }}</p><br>
                                     <div class="project__tags">
                                         {% for tag in post.tags.all %}
-                                            <span class="tag tag--pill tag--main">
-                                                <small>{{ tag }}</small>
+                                            <span class="tag tag--pill tag--sub tag--lg">
+                                                <a href="{% url 'tag-view' tag.id %}"> <small>{{ tag }}</small></a>
                                             </span>
                                         {% endfor %}
                                     </div>
