--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -37,10 +37,12 @@
                                     <div class="project__tags">
                                         {% for tag in project.tags.all %}
                                             <span class="tag tag--pill tag--main">
-                                                <small>{{ tag }}</small>
+                                                <a href="{% url 'tag-view' tag.id %}"> <small>{{ tag }}</small></a>
                                             </span>
                                         {% endfor %}
                                     </div>
+
+                                    
                                 </div>
                             </a>
                         </div>
