--- a/projects/templates/projects/update.html
+++ b/projects/templates/projects/update.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
@@ -8,9 +9,9 @@
             </div>
 
             <form method="post" enctype="multipart/form-data">
-                {% csrf_token %} 
+                {% csrf_token %}
                 {{ form.media }}
-                
+
                 {% for field in form %}
 
                 <div class="form__field">
@@ -20,21 +21,24 @@
 
                 {% endfor %}
 
-                <div class="form__field">
+                {% if project.tags.all %}
+                <div class="form__field donotdisplay">
                     <label for="tags">Tags</label><br />
-                    {% for tag in project.tags.all %}
-                    <div class="tag tag--pill tag--main edit-tags" data-tag="{{ tag.id }}" data-project="{{ project.id }}">{{ tag }} &times;</div>
-                    {% endfor %}
-                    <br />
-                    <br />
-
-                    <textarea class="input" name="newtags" placeholder="Add more tags here.. "></textarea>
+                        {% for tag in project.tags.all %}
+                            <div class="tag tag--pill tag--main edit-tags" data-tag="{{ tag.id }}"
+                                data-project="{{ project.id }}">{{ tag }} &times;</div>
+                        {% endfor %}
+                        <br>
+                    </div>
+                {% endif %}
+                <div class="form__field">
+                    <label for="newtags">Tags</label>
+                    <textarea type="text" class="taginput" name='newtags' placeholder="Add more tags here.. "></textarea>
                 </div>
+
                 <input class="btn btn--sub btn--lg my-md" type="submit" value="submit" />
             </form>
         </div>
     </div>
 </main>
-
-
 {% endblock content %}
