--- a/templates/base.html
+++ b/templates/base.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" />
-        <!-- Icon - IconMonster -->
-        <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
-        <!-- Mumble UI -->
-        <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
-        <!-- Dev Search UI -->
-        <link rel="stylesheet" href="{% static 'css/app.css' %}" />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Profiler - Connect with Developers!</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" />
+    <!-- Icon - IconMonster -->
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+    <!-- Mumble UI -->
+    <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
+    <!-- Dev Search UI -->
+    <link rel="stylesheet" href="{% static 'css/app.css' %}" />
 
-    </head>
-    <body>
-        {% include 'navbar.html' %}
-        
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert--{{message.tags}}">
-                    <p class="alert__message">{{ message }}</p>
-                    <button class="alert__close">⨯</button>
-                </div>
-            {% endfor %}
-        {% endif %}
-        
-        {% block content %} 
-        
-        {% endblock content %}
-        <script type="text/javascript" src={% static 'uikit/app.js' %}></script>
-        <script src="{% static 'js/main.js' %}"></script>
-    </body>
+    <!-- Tagify UI -->
+
+    <link href="https://unpkg.com/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
+
+    <title>Profiler - Connect with Developers!</title>
+
+</head>
+
+<body>
+    {% include 'navbar.html' %}
+
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert--{{message.tags}}">
+        <p class="alert__message">{{ message }}</p>
+        <button class="alert__close">⨯</button>
+    </div>
+    {% endfor %}
+    {% endif %}
+
+    {% block content %}
+
+    {% endblock content %}
+    <script src="https://unpkg.com/@yaireo/tagify"></script>
+    <script type="text/javascript" src={% static 'uikit/app.js' %}></script>
+    <script src="{% static 'js/main.js' %}"></script>
+</body>
+
 </html>
